--- a/src/pages/menu/menu.html
+++ b/src/pages/menu/menu.html
@@ -87,7 +87,7 @@
 <ion-col col-6>
   <ion-card>
     <img src="assets/imgs/large.jpg"/>
-    <div class="card-title"><button ion-button clear (click)="openPizzaMenu()"><div id="text_id">Deserts</div></button></div>
+    <div class="card-title"><button ion-button clear (click)="openPizzaMenu()"><div id="text_id">Desaserts</div></button></div>
   </ion-card>
 </ion-col>
   </ion-row>
